--- a/src/components/Pa2order.astro
+++ b/src/components/Pa2order.astro
@@ -30,16 +30,23 @@
                 </div>
 
                 <div id="slides__6" class="slide">
+                    <img loading="lazy" src="/kokumark.webp" class="slide__img" alt="刻印参考">
+
+                 
+                </div>
+
+                <div id="slides__7" class="slide">
                     <img loading="lazy" src="/kokuinn.webp" class="slide__img" alt="刻印">
 
                 </div>
 
-                <div id="slides__7" class="slide">
+
+                <div id="slides__8" class="slide">
                     <img loading="lazy" src="/stamp.webp" class="slide__img" alt="刻印">
 
                 </div>
 
-                <div id="slides__8" class="slide">
+                <div id="slides__9" class="slide">
                     <img loading="lazy" src="/fasnerre.webp" class="slide__img" alt="ファスナー色">                 
                 </div>
             </div>
