--- a/src/components/Pa3order.astro
+++ b/src/components/Pa3order.astro
@@ -26,11 +26,17 @@
                 </div>
 
                 <div id="slides__6" class="slide">
+                    <img loading="lazy" src="/kokumark.webp" class="slide__img" alt="刻印参考">
+
+                 
+                </div>
+
+                <div id="slides__7" class="slide">
                     <img loading="lazy" src="/kokuinn.webp" class="slide__img" alt="刻印">
 
                 </div>
 
-                <div id="slides__7" class="slide">
+                <div id="slides__8" class="slide">
                     <img loading="lazy" src="/stamp.webp" class="slide__img" alt="刻印">
 
                 </div>
