--- a/src/layouts/English1.astro
+++ b/src/layouts/English1.astro
@@ -28,13 +28,19 @@ import Back from "../components/Back.astro";
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
 		<title>Pirca Mabui</title>
-		<meta name="description" content="We are an online store based in Hokkaido specializing in handmade leather goods. " />
+		<meta name="description" content="We are an online store based in Hokkaido specializing in handmade leather goods." />
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/homeEn/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Pirca Mabui LeatherShop">
+		<meta property="og:description" content="We are an online store based in Hokkaido specializing in handmade leather goods.">
+		<meta property="og:image" content="/tophome.webp">
 	
 
 		<title>{title}</title>
