--- a/src/layouts/English15.astro
+++ b/src/layouts/English15.astro
@@ -31,7 +31,7 @@ import '@fontsource-variable/open-sans';
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
-		<title>Round Wallet</title>
+		<title>Zip-Around Wallet</title>
 		<meta name="description" content="" />
 		<meta name="format-detection" content="telephone=no" />
         <meta name="googlebot" content="noindex">
@@ -39,6 +39,12 @@ import '@fontsource-variable/open-sans';
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/fasner_wallet/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Zip-Around Wallet">
+		<meta property="og:description" content="">
+		<meta property="og:image" content="/pink1.webp">
 	
 
 		<title>{title}</title>
