--- a/src/layouts/English2.astro
+++ b/src/layouts/English2.astro
@@ -32,13 +32,19 @@ import '@fontsource-variable/open-sans';
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
 		<title>Collections</title>
-		<meta name="description" content="" />
+		<meta name="description" content="Regarding the product list"/>
 		<meta name="format-detection" content="telephone=no" />
         <meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/productlistEn/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Collections">
+		<meta property="og:description" content="Regarding the product list">
+		<meta property="og:image" content="/colee.webp">
 	
 
 		<title>{title}</title>
