--- a/src/layouts/English4.astro
+++ b/src/layouts/English4.astro
@@ -29,13 +29,19 @@ import Back from "../components/Back.astro";
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
 		<title>ABOUT THE SHOP</title>
-		<meta name="description" content="About Our Shop" />
+		<meta name="description" content="We are showcasing the special features of our store."/>
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/aboutEn/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Our Quality">
+		<meta property="og:description" content="We are showcasing the special features of our store.">
+		<meta property="og:image" content="/wokrd-min.webp">
 	
 
 		<title>{title}</title>
