--- a/src/layouts/English5.astro
+++ b/src/layouts/English5.astro
@@ -37,6 +37,11 @@ import Back from "../components/Back.astro";
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
 	
+		<meta property="og:url" content="https://pircamabui.com/aboutleatherEn/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="About Our Leather Collection">
+		<meta property="og:description" content="We are introducing the types of leather we offer.">
+		<meta property="og:image" content="/longwallet1-min.webp">
 
 		<title>{title}</title>
 	</head>
