--- a/src/layouts/English7.astro
+++ b/src/layouts/English7.astro
@@ -28,14 +28,20 @@ import Back from "../components/Back.astro";
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
-		<title>Semi Order</title>
-		<meta name="description" content="About Our Leather and the highest quality" />
+		<title>Semi-custom made</title>
+		<meta name="description" content="Crafting your unique leather art" />
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/semiorder/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Semi-custom made">
+		<meta property="og:description" content="Crafting your unique leather art">
+		<meta property="og:image" content="/samale-min.webp">
 	
 
 		<title>{title}</title>
