--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,11 +42,11 @@ import Back from "../components/Back.astro";
 		<meta name="thumbnail" content="/wokrd-min.jpg" />
 
 
-		<meta property="og:url" content="https://sshokinawa.com/contact/">
+		<meta property="og:url" content="https://pircamabui.com/">
 		<meta property="og:type" content="website">
-		<meta property="og:title" content="お問い合わせ・ご予約">
-		<meta property="og:description" content="サンクチュアリに関するお問い合わせやご予約は、こちらのページから">
-		<meta property="og:image" content="/top.webp">
+		<meta property="og:title" content="Pirca Mabui">
+		<meta property="og:description" content="北海道-革製品ハンドメイドのオンラインストアです。鞄、財布、キーケース、ミニマムな財布まで、革のパーツごとを素材別で選択ができるため、唯一無二の「とくべつな色」をお届けします。">
+		<meta property="og:image" content="/tophome.webp">
 	
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-R7FD49YWE3"></script>
