--- a/src/components/Pa2.astro
+++ b/src/components/Pa2.astro
@@ -33,19 +33,25 @@
                     <img loading="lazy" src="/thred.webp" class="slide__img" alt="糸">
 
                 </div>
+
                 <div id="slides__7" class="slide">
+                    <img loading="lazy" src="/kokumark.webp" class="slide__img" alt="刻印参考">
+
+                 
+                </div>
+                <div id="slides__8" class="slide">
                     <img loading="lazy" src="/kokuinn.webp" class="slide__img" alt="刻印参考">
 
                  
                 </div>
 
-                <div id="slides__8" class="slide">
+                <div id="slides__9" class="slide">
                     <img loading="lazy" src="/stamp.webp" class="slide__img" alt="刻印例">
 
                  
                 </div>
 
-                <div id="slides__9" class="slide">
+                <div id="slides__10" class="slide">
                     <img loading="lazy" src="/fasnerre.webp" class="slide__img" alt="金具色">
 
                  
