--- a/src/components/Pa5orderEn.astro
+++ b/src/components/Pa5orderEn.astro
@@ -44,16 +44,21 @@
                 </div>
 
                 <div id="slides__9" class="slide">
-                    <img loading="lazy" src="/kokuinn.webp" class="slide__img" alt="刻印">
+                    <img loading="lazy" src="/marken.webp" class="slide__img" alt="刻印">
 
                 </div>
 
                 <div id="slides__10" class="slide">
-                    <img loading="lazy" src="/stamp.webp" class="slide__img" alt="刻印">
+                    <img loading="lazy" src="/kokuinn.webp" class="slide__img" alt="刻印">
 
                 </div>
 
                 <div id="slides__11" class="slide">
+                    <img loading="lazy" src="/stamp.webp" class="slide__img" alt="刻印">
+
+                </div>
+
+                <div id="slides__12" class="slide">
                     <img loading="lazy" src="/fasnerEn.webp" class="slide__img" alt="ファスナー色">                 
                 </div>
 
