--- a/src/layouts/English11.astro
+++ b/src/layouts/English11.astro
@@ -39,6 +39,13 @@ import '@fontsource-variable/open-sans';
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+
+		<meta property="og:url" content="https://pircamabui.com/smartkey_wallet/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Smartkey Wallet">
+		<meta property="og:description" content="">
+		<meta property="og:image" content="/smartkey2.webp">
 	
 
 		<title>{title}</title>
