--- a/src/layouts/English3.astro
+++ b/src/layouts/English3.astro
@@ -39,6 +39,12 @@ import '@fontsource-variable/open-sans';
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/keycaseEn/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Collections">
+		<meta property="og:description" content="Keycase Wallet">
+		<meta property="og:image" content="/keycasebody.webp">
 	
 
 		<title>{title}</title>
