--- a/src/layouts/English6.astro
+++ b/src/layouts/English6.astro
@@ -29,13 +29,20 @@ import Back from "../components/Back.astro";
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
 		<title>TERMS OF SERVICE</title>
-		<meta name="description" content="About Our Leather and the highest quality" />
+		<meta name="description" content="Legal Information Based on the Specified Commercial Transactions Law" />
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/teams-of-setvice/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Terms of service">
+		<meta property="og:description" content="Legal Information Based on the Specified Commercial Transactions Law">
+		<meta property="og:image" content="/ot313_2.webp">
+		
 	
 
 		<title>{title}</title>
