--- a/src/layouts/English9.astro
+++ b/src/layouts/English9.astro
@@ -39,6 +39,12 @@ import '@fontsource-variable/open-sans';
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/keyhookEn/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Keycase type Hook">
+		<meta property="og:description" content="">
+		<meta property="og:image" content="/jeafiee.webp">
 	
 
 		<title>{title}</title>
