--- a/src/layouts/Layout10.astro
+++ b/src/layouts/Layout10.astro
@@ -39,6 +39,12 @@ import '@fontsource/shippori-mincho';
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/roundwallet1/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="ラウンドウォレット">
+		<meta property="og:description" content="ラウンドウォレットについて">
+		<meta property="og:image" content="/roundbody.webp">
 	
 
 		<title>{title}</title>
