--- a/src/layouts/Layout12.astro
+++ b/src/layouts/Layout12.astro
@@ -39,6 +39,12 @@ import '@fontsource/shippori-mincho';
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/threewallet/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="3つ折り財布">
+		<meta property="og:description" content="3つ折り財布について">
+		<meta property="og:image" content="/three1.webp">
 	
 
 		<title>{title}</title>
