--- a/src/layouts/Layout15.astro
+++ b/src/layouts/Layout15.astro
@@ -31,7 +31,7 @@ import '@fontsource/shippori-mincho';
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
-		<title>ミニウォレット</title>
+		<title>ミニマムウォレット</title>
 		<meta name="description" content="ミニマムウォレットについて" />
 		<meta name="format-detection" content="telephone=no" />
         <meta name="googlebot" content="noindex">
@@ -41,6 +41,12 @@ import '@fontsource/shippori-mincho';
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/minimam/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="ミニマムウォレット">
+		<meta property="og:description" content="ミニマムウォレットについて">
+		<meta property="og:image" content="/mini2.webp">
 	
 
 		<title>{title}</title>
