--- a/src/layouts/Layout16.astro
+++ b/src/layouts/Layout16.astro
@@ -41,6 +41,13 @@ import '@fontsource/shippori-mincho';
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+
+		<meta property="og:url" content="https://pircamabui.com/note/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="RHODIAカバー">
+		<meta property="og:description" content="RHODIAカバーについて">
+		<meta property="og:image" content="/note1.webp">
 	
 
 		<title>{title}</title>
