--- a/src/layouts/Layout2.astro
+++ b/src/layouts/Layout2.astro
@@ -36,6 +36,12 @@ import Back from "../components/Back.astro";
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/kodawari/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="こだわり">
+		<meta property="og:description" content="当店のこだわりについて">
+		<meta property="og:image" content="/wokrd-min.webp">
 	
 
 		<title>{title}</title>
