--- a/src/layouts/Layout3.astro
+++ b/src/layouts/Layout3.astro
@@ -29,13 +29,19 @@ import Back from "../components/Back.astro";
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
 		<title>革について</title>
-		<meta name="description" content="革について" />
+		<meta name="description" content="当店の取り扱っている革についてご紹介しています。" />
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/aboutleather/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="革について">
+		<meta property="og:description" content="当店の取り扱っている革についてご紹介しています。">
+		<meta property="og:image" content="/wokrd-min.webp">
 	
 
 		<title>{title}</title>
