--- a/src/layouts/Layout7.astro
+++ b/src/layouts/Layout7.astro
@@ -31,14 +31,20 @@ import '@fontsource/shippori-mincho';
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
-		<title>商品リスト1ページ目</title>
-		<meta name="description" content="商品リスト1ページ目について" />
+		<title>商品リスト</title>
+		<meta name="description" content="商品リストについて" />
 		<meta name="format-detection" content="telephone=no" />
         <meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/productlist/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="商品リスト">
+		<meta property="og:description" content="商品リストについて">
+		<meta property="og:image" content="/colee.webp">
 	
 
 		<title>{title}</title>
