--- a/src/layouts/Layout8.astro
+++ b/src/layouts/Layout8.astro
@@ -39,6 +39,12 @@ import '@fontsource/shippori-mincho';
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/keycase/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="キーケース">
+		<meta property="og:description" content="キーケースについて">
+		<meta property="og:image" content="/keycasebody.webp">
 	
 
 		<title>{title}</title>
