--- a/src/layouts/Layout9.astro
+++ b/src/layouts/Layout9.astro
@@ -30,14 +30,20 @@ import '@fontsource/shippori-mincho';
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
-		<title>パターンオーダー</title>
-		<meta name="description" content="パターンオーダーについて" />
+		<title>セミオーダー</title>
+		<meta name="description" content="セミオーダーについて" />
 		<meta name="format-detection" content="telephone=no" />
         <meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/semi_order/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="セミオーダー">
+		<meta property="og:description" content="セミオーダーについて">
+		<meta property="og:image" content="/samale-min.webp">
 	
 
 		<title>{title}</title>
