--- a/src/layouts/Layout11.astro
+++ b/src/layouts/Layout11.astro
@@ -39,6 +39,12 @@ import '@fontsource/shippori-mincho';
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/keycasehook/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="キーケースフックタイプ">
+		<meta property="og:description" content="キーケースフックタイプについて">
+		<meta property="og:image" content="/keycasehocksa.webp">
 	
 
 		<title>{title}</title>
