--- a/src/layouts/Layout13.astro
+++ b/src/layouts/Layout13.astro
@@ -39,6 +39,12 @@ import '@fontsource/shippori-mincho';
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/smartkey/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="スマートキーウォレット">
+		<meta property="og:description" content="スマートキーウォレットについて">
+		<meta property="og:image" content="/smartkey2.webp">
 	
 
 		<title>{title}</title>
