--- a/src/layouts/Layout18.astro
+++ b/src/layouts/Layout18.astro
@@ -32,7 +32,7 @@ import '@fontsource/shippori-mincho';
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
 		<title>2つ折り財布</title>
-		<meta name="description" content="RHODIAカバーについて" />
+		<meta name="description" content="2つ折り財布について" />
 		<meta name="format-detection" content="telephone=no" />
         <meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
@@ -41,6 +41,12 @@ import '@fontsource/shippori-mincho';
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/foldwallet/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="2つ折り財布">
+		<meta property="og:description" content="2つ折り財布について">
+		<meta property="og:image" content="/foldwallet2.webp">
 	
 
 		<title>{title}</title>
