--- a/src/layouts/Layout5.astro
+++ b/src/layouts/Layout5.astro
@@ -32,13 +32,19 @@ import '@fontsource/shippori-mincho';
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
 		<title>お問い合わせ</title>
-		<meta name="description" content="お問い合わせ" />
+		<meta name="description" content="お問い合わせについて" />
 		<meta name="format-detection" content="telephone=no" />
         <meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/contact/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="お問い合わせ">
+		<meta property="og:description" content="お問い合わせについて">
+		<meta property="og:image" content="">
 	
 
 
