--- a/src/layouts/Layout6.astro
+++ b/src/layouts/Layout6.astro
@@ -34,13 +34,19 @@ import '@fontsource/shippori-mincho';
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
 		<title>リーガル</title>
-		<meta name="description" content="リーガル" />
+		<meta name="description" content="特定商取引法に基づく表記について" />
 		<meta name="format-detection" content="telephone=no" />
         <meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
+
+		<meta property="og:url" content="https://pircamabui.com/leagal/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="リーガル">
+		<meta property="og:description" content="特定商取引法に基づく表記について">
+		<meta property="og:image" content="">
 	
 
 		<title>{title}</title>
