--- a/src/components/Pa5.astro
+++ b/src/components/Pa5.astro
@@ -146,7 +146,7 @@
                 </select>
              
                 <label class="Home_Contact_Label__hwNpu" for="right_pocket2">*仕切り</label>
-                <select name="ight_pocket2" class="form-control" required="required">
+                <select name="right_pocket2" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
                     <option value="ダークブラウン">ダークブラウン</option>
@@ -157,7 +157,7 @@
                     <option value="ターコイズ">ターコイズ</option>
                     <option value="ピンク">ピンク</option>
                 </select>
-
+ 
                 <label class="Home_Contact_Label__hwNpu" for="mati">*カードポケット</label>
                 <select name="mati" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
