--- a/src/components/Pa6.astro
+++ b/src/components/Pa6.astro
@@ -83,8 +83,8 @@
                     <option value="ピンク">ピンク</option>
                 </select>
              
-                <label class="Home_Contact_Label__hwNpu" for="interior">*中央パーツ</label>
-                <select name="interior" class="form-control" required="required">
+                <label class="Home_Contact_Label__hwNpu" for="center_parts">*中央パーツ</label>
+                <select name="center_parts" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
                     <option value="ダークブラウン">ダークブラウン</option>
@@ -96,8 +96,8 @@
                     <option value="ピンク">ピンク</option>
                 </select>
             
-                <label class="Home_Contact_Label__hwNpu" for="left_pocket1">*上パーツ</label>
-                <select name="left_pocket1" class="form-control" required="required">
+                <label class="Home_Contact_Label__hwNpu" for="top_parts">*上パーツ</label>
+                <select name="top_parts" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
                     <option value="ダークブラウン">ダークブラウン</option>
@@ -109,8 +109,8 @@
                     <option value="ピンク">ピンク</option>
                 </select>
              
-                <label class="Home_Contact_Label__hwNpu" for="right_pocket2">*下パーツ</label>
-                <select name="ight_pocket2" class="form-control" required="required">
+                <label class="Home_Contact_Label__hwNpu" for="under_parts">*下パーツ</label>
+                <select name="under_parts" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
                     <option value="ダークブラウン">ダークブラウン</option>
@@ -124,7 +124,7 @@
 
 
                 <label class="Home_Contact_Label__hwNpu" for="kanagu_keyhook">*ロディアNo.11</label>
-                <select name="kanagu_keyhook" class="form-control" required="required">
+                <select name="rhodia" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="7mm横罫">7mm&thinsp;横罫</option>
                     <option value="5mm方眼">5mm&thinsp;方眼</option>
