--- a/src/components/Pa6order.astro
+++ b/src/components/Pa6order.astro
@@ -91,8 +91,8 @@
                     <option value="シルバー">シルバー</option>                    
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kanagu_keyhook">*ロディアNo.11</label>
-                <select name="kanagu_keyhook" class="form-control" required="required">
+                <label class="Home_Contact_Label__hwNpu" for="rhodia">*ロディアNo.11</label>
+                <select name="rhodia" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="7mm横罫">7mm&thinsp;横罫</option>
                     <option value="5mm方眼">5mm&thinsp;方眼</option>
