--- a/src/layouts/Pattern2.astro
+++ b/src/layouts/Pattern2.astro
@@ -31,8 +31,8 @@ import '@fontsource/shippori-mincho';
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
-		<title>パターンオーダー ミニマムウォレット</title>
-		<meta name="description" content="パターンオーダー ミニマムウォレット" />
+		<title>セミオーダー ミニマムウォレット</title>
+		<meta name="description" content="セミオーダー ミニマムウォレット" />
 		<meta name="format-detection" content="telephone=no" />
         <meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
