--- a/src/layouts/Pattern5.astro
+++ b/src/layouts/Pattern5.astro
@@ -31,8 +31,8 @@ import '@fontsource/shippori-mincho';
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
-		<title>パターンオーダー キーケース（ スマートキー ）</title>
-		<meta name="description" content="パターンオーダー キーケース（ フックタイプ ）について" />
+		<title>セミオーダー キーケース（ スマートキー ）</title>
+		<meta name="description" content="セミオーダー キーケース（ フックタイプ ）について" />
 		<meta name="format-detection" content="telephone=no" />
         <meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
