--- a/src/layouts/Pattern9.astro
+++ b/src/layouts/Pattern9.astro
@@ -9,13 +9,14 @@ const { title,description,image } = Astro.props;
 
 import Header from "../components/Header.astro";
 
+import Pa9 from "../components/Pa9.astro";
 
-import Pa1 from "../components/Pa1.astro";
 import Back from "../components/Back.astro";
 import Footer from "../components/Footer.astro";
 
 
 import '@fontsource/shippori-mincho';
+
 
 ---
 
@@ -30,8 +31,8 @@ import '@fontsource/shippori-mincho';
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
-		<title>セミオーダー キーケース</title>
-		<meta name="description" content="セミオーダー キーケース" />
+		<title>セミオーダー ラウンドファスナーウォレット</title>
+		<meta name="description" content="セミオーダー ラウンドファスナーウォレット" />
 		<meta name="format-detection" content="telephone=no" />
         <meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
@@ -47,7 +48,8 @@ import '@fontsource/shippori-mincho';
 
         <Header />
 
-        <Pa1 />		
+        <Pa9 />		
+
 		<Back />
 		<Footer />
 		<slot />
