--- a/src/components/Pa9order.astro
+++ b/src/components/Pa9order.astro
@@ -3,44 +3,56 @@
         <div class="slider">
             <div class="slides">
                 <div id="slides__1" class="slide">
-                    <img loading="lazy" src="/patternkey.webp" class="slide__img" alt="パターン">
-                    <a class="slide__next" title="Next"></a>
+                    <img loading="lazy" src="/faspat2.webp" class="slide__img" alt="パターン">
+             
                 </div>
                 <div id="slides__2" class="slide">
-                    <img loading="lazy" src="/color1.webp" class="slide__img" alt="皮サンプル">
-                  
+                    <img loading="lazy" src="/faspa3.webp" class="slide__img" alt="皮サンプル">
+                    
                 </div>
+
                 <div id="slides__3" class="slide">
+                    <img loading="lazy" src="/faspat1.webp" class="slide__img" alt="皮サンプル">
+                    
+                </div>
+            
+                <div id="slides__4" class="slide">
+                    <img loading="lazy" src="/color1.webp" class="slide__img" alt="皮サンプル">
+                 
+                </div>
+                <div id="slides__5" class="slide">
                     <img loading="lazy" src="/color2.webp" class="slide__img" alt=皮サンプル２"">
                   
                 </div>
-                <div id="slides__4" class="slide">
-                    <img loading="lazy" src="/fasner-min.webp" class="slide__img" alt="ファスナー色">
-
-                </div>
 
                 <div id="slides__6" class="slide">
-                    <img loading="lazy" src="/thred.webp" class="slide__img" alt="糸">
+                    <img loading="lazy" src="/fasner-min.webp" class="slide__img" alt=ファスナーサンプル"">
 
                 </div>
 
                 <div id="slides__7" class="slide">
-                    <img loading="lazy" src="/kokumark.webp" class="slide__img" alt="刻印参考">
+                    <img loading="lazy" src="/thred.webp" class="slide__img" alt="糸">
 
-                 
                 </div>
 
                 <div id="slides__8" class="slide">
-                    <img loading="lazy" src="/kokuinn.webp" class="slide__img" alt="刻印">
+                    <img loading="lazy" src="/kokumark.webp" class="slide__img" alt="糸">
 
                 </div>
 
                 <div id="slides__9" class="slide">
-                    <img loading="lazy" src="/stamp.webp" class="slide__img" alt="刻印">
+                    <img loading="lazy" src="/kokuinn.webp" class="slide__img" alt="刻印参考">
 
+                 
                 </div>
 
                 <div id="slides__10" class="slide">
+                    <img loading="lazy" src="/stamp.webp" class="slide__img" alt="刻印例">
+
+                 
+                </div>
+
+                <div id="slides__11" class="slide">
                     <img loading="lazy" src="/fasnerre.webp" class="slide__img" alt="ファスナー色">                 
                 </div>
 
@@ -57,27 +69,25 @@
       
 
         <p class="bun">
-            革・糸の色・金具などをご選択できます。お客様の好みにあった組み合わせをぜひ見つけてください。<br class="pc">
+            革・糸の色・金具などをご選択できます。<br class="sp"><br class="sp">お客様の好みにあった組み合わせをぜひ見つけてください。<br class="pc">
             <br class="sp"><br class="sp"><br class="pc">お引き渡しについて、仕入れにかかる日数を加え、発送まで2、3週間程度お時間を頂いております。
             <a href="/leagal" class="animate-link" >詳細はこちらから<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#003EA2" viewBox="0 0 256 256"><path d="M132,136v64a12,12,0,0,1-24,0V165L48.49,224.49a12,12,0,0,1-17-17L91,148H56a12,12,0,0,1,0-24h64A12,12,0,0,1,132,136ZM208,28H80A20,20,0,0,0,60,48V92a12,12,0,0,0,24,0V52H204V172H164a12,12,0,0,0,0,24h44a20,20,0,0,0,20-20V48A20,20,0,0,0,208,28Z"></path></svg></a>
           
         </p>
     </div>
 </div>
-
 <div id="contact" class="con">
     <h1 class="Home_Contact_Title__KdAFZ">SELECT</h1>
     <main class="Layout_Main__dLHqI">
         <div class="Home_Contact__nbvJ6">
             <p class="Home_Contact_Text__3D7zy">オーダーは以下のフォームよりお送りください。<br class="sp"><br>送信後、決算ページに移行します。<br class="sp"><span class="stripe-marker"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M230.08,78.26l-31.84,26.88L208,145.33a5.46,5.46,0,0,1-8.19,5.86L164,129.66l-35.78,21.53a5.46,5.46,0,0,1-8.19-5.86l9.73-40.19L97.92,78.26a5.38,5.38,0,0,1,3.13-9.48l41.79-3.31,16.1-38.14a5.51,5.51,0,0,1,10.12,0l16.1,38.14L227,68.78A5.38,5.38,0,0,1,230.08,78.26Z" opacity="0.2"></path><path d="M239.35,70.08a13.41,13.41,0,0,0-11.77-9.28l-36.94-2.92L176.43,24.22a13.51,13.51,0,0,0-24.86,0L137.36,57.88,100.42,60.8a13.39,13.39,0,0,0-7.66,23.58l28.06,23.68-8.56,35.39a13.32,13.32,0,0,0,5.1,13.91,13.51,13.51,0,0,0,15,.69L164,139l31.65,19.06a13.54,13.54,0,0,0,15-.69,13.34,13.34,0,0,0,5.09-13.91l-8.56-35.39,28.06-23.68A13.32,13.32,0,0,0,239.35,70.08ZM193.08,99a8,8,0,0,0-2.61,8l8.28,34.21L168.13,122.8a8,8,0,0,0-8.25,0l-30.62,18.43L137.54,107a8,8,0,0,0-2.62-8L108,76.26l35.52-2.81a8,8,0,0,0,6.74-4.87L164,35.91l13.79,32.67a8,8,0,0,0,6.74,4.87l35.53,2.81Zm-105,24.18L29.66,181.66a8,8,0,0,1-11.32-11.32l58.45-58.45a8,8,0,0,1,11.32,11.32Zm10.81,49.87a8,8,0,0,1,0,11.31L45.66,237.66a8,8,0,0,1-11.32-11.32l53.27-53.26A8,8,0,0,1,98.92,173.08Zm73-1a8,8,0,0,1,0,11.32l-54.28,54.28a8,8,0,0,1-11.32-11.32l54.29-54.28A8,8,0,0,1,171.94,172.06Z"></path></svg>カート名：注文希望の色をご選択します。</span>  <br class="sp"><br class="pc"><span class="kome">※</span>は必須項目です</p>
-            <form method="post" action="https://contact-web.form.newt.so/v1/l-LCBz-tS">
-                <div style="display: none;"><input type="text" name="name" /></div>
+            <form method="post" action="https://contact-web.form.newt.so/v1/WdVjdyThT">
+                <div style="display: none;"><input type="text" name="wana" /></div>
                 <label class="Home_Contact_Label__hwNpu" for="name">*氏名</label>
                 <input class="Home_Contact_InputText__vKPd7" id="name" required="required" name="name" placeholder="本名をご記入ください">
                 <label class="Home_Contact_Label__hwNpu" for="email">*メールアドレス</label>
                 <input class="Home_Contact_InputText__vKPd7" id="email" type="email" required="required" name="email" placeholder="info@example.com">
                
-              
 
                 <label class="Home_Contact_Label__hwNpu" for="fasner_gold">ファスナー (&thinsp;ゴールド&thinsp;)</label>
                 <select name="fasner_gold" class="form-control">
@@ -132,28 +142,25 @@
                     <option value="No.8ターコイズ">No.8&thinsp;ターコイズ</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kanagu_keyhook">*キーフック</label>
-                <select name="kanagu_keyhook" class="form-control" required="required">
+
+                <label class="Home_Contact_Label__hwNpu" for="hook">*ホック</label>
+                <select name="hook" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ゴールド">ゴールド</option>
-                    <option value="シルバー">シルバー</option>
-                    <option value="アンティーク">アンティーク</option>
+                    <option value="シルバー">シルバー</option>                    
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様 (&thinsp;希望の方&thinsp;)</label>
-                <select name="kokuin" class="form-control" >
+                <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様（&thinsp;希望の方&thinsp;）</label>
+                <select name="kokuin" class="form-control">
                     <option value="" disabled selected>選択してください</option>
-                    <option value="有り">有り(配置:右ポケット)</option>                
+                    <option value="有り">有り（配置:カードポケット１段目）</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印 (&thinsp;希望の方 配置:右ポケット&thinsp;)</label>
+                <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印(&thinsp;配置:カードポケット１段目&thinsp;)</label>
                 <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください。大小文字含むA~Z(*大文字は、2つまで。例:T.TTなど3つ場合は、不可)、数字2桁まで(０〜９、*同数字不可:例:22)、 記号【.＆】のみ"></textarea>
 
                 <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
             </form>
-            <br>
-            <p class="recaptcha_policy">This site is protected by reCAPTCHA and the Google<a href="https://policies.google.com/privacy" target="_blank">Privacy Policy</a> and <a href="https://policies.google.com/terms" target="_blank">Terms of Service</a> apply.</p>
-            <br class="sp"><br class="sp">  
         </div>
     </main>
 </div>
@@ -161,10 +168,10 @@
 
         <script
         is:inline
-        src="https://www.google.com/recaptcha/api.js?render=6LcuhAMiAAAAAAARmCpKoIg_rEO-iK-Uk_coKvXo&hl=ja">
-         </script>
+        src="https://www.google.com/recaptcha/api.js?render=6LcuhAMiAAAAAAARmCpKoIg_rEO-iK-Uk_coKvXo&hl=ja"
+      ></script>
       
-        <script>
+      <script>
         const form = document.getElementById('form')
         form?.addEventListener('submit', submitFormData)
       
@@ -198,7 +205,7 @@
         }
       
         async function sendRequest(formData: FormData) {
-          return await fetch('https://contact-web.form.newt.so/v1/l-LCBz-tS', {
+          return await fetch('https://contact-web.form.newt.so/v1/WdVjdyThT', {
             method: 'POST',
             body: formData,
             headers: {
@@ -206,9 +213,10 @@
             },
           })
         }
-        </script>
+      </script>
       
 
+ 
       <style>
 
         .recaptcha_policy {
