--- a/src/components/Pa4.astro
+++ b/src/components/Pa4.astro
@@ -8,11 +8,16 @@
 
                 
                 <div id="slides__1" class="slide">
-                    <img loading="lazy" src="/keypattern.webp" class="slide__img" alt="パターン">
+                    <img loading="lazy" src="/threepa1.2.webp" class="slide__img" alt="パターン">
             
                 </div>
                 <div id="slides__2" class="slide">
-                    <img loading="lazy" src="/keycasrre.webp" class="slide__img" alt="皮サンプル">
+                    <img loading="lazy" src="/theep1.1.webp" class="slide__img" alt="皮サンプル">
+                    
+                </div>
+
+                <div id="slides__2" class="slide">
+                    <img loading="lazy" src="/threepaa2.webp" class="slide__img" alt="皮サンプル">
                     
                 </div>
 
@@ -71,7 +76,7 @@
     <main class="Layout_Main__dLHqI">
         <div class="Home_Contact__nbvJ6">
             <p class="Home_Contact_Text__3D7zy">セミオーダーは以下のフォームよりお送りください。<br class="sp"><br>送信後、決算ページに移行します。<br class="sp"><span class="stripe-marker">カート名：セミオーダーをご選択します。</span><br class="sp"><br class="pc"><span class="kome">※</span>は必須項目です</p>
-            <form method="post" action="https://contact-web.form.newt.so/v1/ONvlZEQPg">
+            <form method="post" action="https://contact-web.form.newt.so/v1/fjnDAq4nE">
                 <div style="display: none;"><input type="text" name="wana" /></div>
                 <label class="Home_Contact_Label__hwNpu" for="name">*氏名</label>
                 <input class="Home_Contact_InputText__vKPd7" id="name" required="required" name="name" placeholder="本名をご記入ください">
@@ -91,8 +96,47 @@
                     <option value="ピンク">ピンク</option>
                 </select>
 
+                <label class="Home_Contact_Label__hwNpu" for="interior">*内装</label>
+                <select name="interior" class="form-control" required="required">
+                    <option value="" disabled selected>選択してください</option>
+                    <option value="ブラウン">ブラウン</option>
+                    <option value="ダークブラウン">ダークブラウン</option>
+                    <option value="ブラック">ブラック</option>
+                    <option value="グレー">グレー</option>
+                    <option value="オレンジ">オレンジ</option>
+                    <option value="グリーン">グリーン</option>
+                    <option value="ターコイズ">ターコイズ</option>
+                    <option value="ピンク">ピンク</option>
+                </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="left_pocket">*左ポケット</label>
+                <label class="Home_Contact_Label__hwNpu" for="box_coincase">*ボックス型小銭入れ</label>
+                <select name="box_coincase" class="form-control" required="required">
+                    <option value="" disabled selected>選択してください</option>
+                    <option value="ブラウン">ブラウン</option>
+                    <option value="ダークブラウン">ダークブラウン</option>
+                    <option value="ブラック">ブラック</option>
+                    <option value="グレー">グレー</option>
+                    <option value="オレンジ">オレンジ</option>
+                    <option value="グリーン">グリーン</option>
+                    <option value="ターコイズ">ターコイズ</option>
+                    <option value="ピンク">ピンク</option>
+                </select>
+
+
+                <label class="Home_Contact_Label__hwNpu" for="back_interior">*裏内装</label>
+                <select name="back_interior" class="form-control" required="required">
+                    <option value="" disabled selected>選択してください</option>
+                    <option value="ブラウン">ブラウン</option>
+                    <option value="ダークブラウン">ダークブラウン</option>
+                    <option value="ブラック">ブラック</option>
+                    <option value="グレー">グレー</option>
+                    <option value="オレンジ">オレンジ</option>
+                    <option value="グリーン">グリーン</option>
+                    <option value="ターコイズ">ターコイズ</option>
+                    <option value="ピンク">ピンク</option>
+                </select>
+
+                <label class="Home_Contact_Label__hwNpu" for="left_pocket">*カードポケット左</label>
                 <select name="left_pocket" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
@@ -105,7 +149,7 @@
                     <option value="ピンク">ピンク</option>
                 </select>
             
-                <label class="Home_Contact_Label__hwNpu" for="center_pocket">*中央ポケット</label>
+                <label class="Home_Contact_Label__hwNpu" for="center_pocket">*カードポケット中央</label>
                 <select name="center_pocket" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
@@ -118,7 +162,7 @@
                     <option value="ピンク">ピンク</option>
                 </select>
              
-                <label class="Home_Contact_Label__hwNpu" for="right_pocket">*右ポケット</label>
+                <label class="Home_Contact_Label__hwNpu" for="right_pocket">*カードポケット右</label>
                 <select name="right_pocket" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
@@ -138,29 +182,6 @@
                     <option value="シルバー">シルバー</option>                    
                 </select>
 
-           
-                <label class="Home_Contact_Label__hwNpu" for="kanagu_keyhook">*キーフック</label>
-                <select name="kanagu_keyhook" class="form-control" required="required">
-                    <option value="" disabled selected>選択してください</option>
-                    <option value="ゴールド">ゴールド</option>
-                    <option value="シルバー">シルバー</option>
-                </select>
-
-                <label class="Home_Contact_Label__hwNpu" for="hatome">*ハトメ</label>
-                <select name="hatome" class="form-control" required="required">
-                    <option value="" disabled selected>選択してください</option>
-                    <option value="ゴールド">ゴールド</option>
-                    <option value="シルバー">シルバー</option>
-                </select>
-
-                <label class="Home_Contact_Label__hwNpu" for="ring">*リング</label>
-                <select name="ring" class="form-control" required="required">
-                    <option value="" disabled selected>選択してください</option>
-                    <option value="ゴールド">ゴールド</option>
-                    <option value="シルバー">シルバー</option>
-                </select>
-
-
                 <label class="Home_Contact_Label__hwNpu" for="ito">*糸</label>
                 <select name="ito" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
@@ -177,10 +198,10 @@
                 <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様（希望の方）</label>
                 <select name="kokuin" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
-                    <option value="有り">有り（配置:中央ポケット）</option>                
+                    <option value="有り">有り（配置:カードポケット左）</option>                
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印(&thinsp;希望の方 配置:中央ポケット&thinsp;)</label>
+                <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印(&thinsp;希望の方 配置:カードポケット左&thinsp;)</label>
                 <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください。大小文字含むA~Z(*大文字は、2つまで。例:T.TTなど3つの場合は、不可)、数字2桁まで(０〜９、*同数字不可:例:22)、 記号【.＆】のみ"></textarea>
 
                 <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
@@ -229,7 +250,7 @@
         }
       
         async function sendRequest(formData: FormData) {
-          return await fetch('https://contact-web.form.newt.so/v1/ONvlZEQPg', {
+          return await fetch('https://contact-web.form.newt.so/v1/fjnDAq4nE', {
             method: 'POST',
             body: formData,
             headers: {
@@ -703,5 +724,3 @@
                 }
                 
                 </style>
-                
-        
