--- a/src/components/Pa3order.astro
+++ b/src/components/Pa3order.astro
@@ -3,7 +3,7 @@
         <div class="slider">
             <div class="slides">
                 <div id="slides__1" class="slide">
-                    <img loading="lazy" src="/keypattern.webp" class="slide__img" alt="パターン">
+                    <img loading="lazy" src="/keyhookrenw.webp" class="slide__img" alt="パターン">
             
                 </div>
                 <div id="slides__2" class="slide">
@@ -117,7 +117,7 @@
 
 
                 <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様(希望の方)</label>
-                <select name="kokuin" class="form-control"  >
+                <select name="kokuin" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
                     <option value="有り">有り（中央ポケット）</option>                
                 </select>
