--- a/src/components/Pa4.astro
+++ b/src/components/Pa4.astro
@@ -8,7 +8,7 @@
 
                 
                 <div id="slides__1" class="slide">
-                    <img loading="lazy" src="/threepa1.2.webp" class="slide__img" alt="パターン">
+                    <img loading="lazy" src="/threerenw.webp" class="slide__img" alt="パターン">
             
                 </div>
                 <div id="slides__2" class="slide">
