--- a/src/components/Pa9.astro
+++ b/src/components/Pa9.astro
@@ -3,7 +3,7 @@
         <div class="slider">
             <div class="slides">
                 <div id="slides__1" class="slide">
-                    <img loading="lazy" src="/faspat2.webp" class="slide__img" alt="パターン">
+                    <img loading="lazy" src="/fasrenw.webp" class="slide__img" alt="パターン">
              
                 </div>
                 <div id="slides__2" class="slide">
