--- a/src/components/Productlisten.astro
+++ b/src/components/Productlisten.astro
@@ -1,6 +1,9 @@
 
       
-<h1  class="Home_Contact_Title__KdAFZ">Collections<br class="pc"><br class="sp"><span class="koda"><br class="pc"><br class="sp">100% handcrafted by a single craftsman<br class="pc"><br class="sp">Hand Stitched with traditional methods<br class="pc"><br class="sp">Full grain Italian leather</span></h1>
+<h1  class="Home_Contact_Title__KdAFZ">Collections<br class="pc"><br class="sp"><span class="koda">
+  <br class="pc"><br class="sp">100% handcrafted by a single craftsman
+  <br class="pc"><br class="sp">Hand Stitched with traditional methods
+  <br class="pc"><br class="sp">Full grain Italian leather</span></h1>
 
 
 
@@ -524,7 +527,7 @@ h1, h2, h3, h4, h5, h6 {
 
 
 .Home_Contact_Title__KdAFZ {
-    margin: 0 0 4px;
+    margin: 0px 10px 0px;
     padding: 0;
     text-align: center;
     line-height: 1.5;
