--- a/src/components/Pa4order.astro
+++ b/src/components/Pa4order.astro
@@ -3,7 +3,7 @@
         <div class="slider">
             <div class="slides">
                 <div id="slides__1" class="slide">
-                    <img loading="lazy" src="/threepa1.2.webp" class="slide__img" alt="パターン">
+                    <img loading="lazy" src="/threerenw.webp" class="slide__img" alt="パターン">
             
                 </div>
                 <div id="slides__2" class="slide">
