--- a/src/components/Pa7order.astro
+++ b/src/components/Pa7order.astro
@@ -3,52 +3,51 @@
         <div class="slider">
             <div class="slides">
                 <div id="slides__1" class="slide">
-                    <img loading="lazy" src="/roundpattern.webp" class="slide__img" alt="パターン">
+                    <img loading="lazy" src="/minirenewgaiso.webp" class="slide__img" alt="パターン">
             
                 </div>
                 <div id="slides__2" class="slide">
-                    <img loading="lazy" src="/koreree.webp" class="slide__img" alt="皮サンプル">
+                    <img loading="lazy" src="/minipa2.webp" class="slide__img" alt="皮サンプル">
                     
                 </div>
 
-                <div id="slides__2" class="slide">
+                <div id="slides__3" class="slide">
+                    <img loading="lazy" src="/minirenw2.webp" class="slide__img" alt="皮サンプル">
+                    
+                </div>
+
+                <div id="slides__4" class="slide">
                     <img loading="lazy" src="/color1.webp" class="slide__img" alt="皮サンプル">
                  
                 </div>
-                <div id="slides__3" class="slide">
+                <div id="slides__5" class="slide">
                     <img loading="lazy" src="/color2.webp" class="slide__img" alt=皮サンプル２"">
                   
                 </div>
-                <div id="slides__4" class="slide">
-                    <img loading="lazy" src="/fasner-min.webp" class="slide__img" alt=ファスナーサンプル"">
 
-                </div>
-
-                <div id="slides__5" class="slide">
+                <div id="slides__6" class="slide">
                     <img loading="lazy" src="/thred.webp" class="slide__img" alt="糸">
 
                 </div>
 
-                <div id="slides__6" class="slide">
-                    <img loading="lazy" src="/kokumark.webp" class="slide__img" alt="刻印参考">
+
+                <div id="slides__7" class="slide">
+                    <img loading="lazy" src="/kokumark.webp" class="slide__img" alt="糸">
+
+                </div>
+                <div id="slides__8" class="slide">
+                    <img loading="lazy" src="/kokuinn.webp" class="slide__img" alt="刻印参考">
 
                  
                 </div>
 
-                <div id="slides__7" class="slide">
-                    <img loading="lazy" src="/kokuinn.webp" class="slide__img" alt="刻印">
-
-                </div>
-
-
-                <div id="slides__8" class="slide">
-                    <img loading="lazy" src="/stamp.webp" class="slide__img" alt="刻印">
-
-                </div>
-
                 <div id="slides__9" class="slide">
-                    <img loading="lazy" src="/fasnerre.webp" class="slide__img" alt="ファスナー色">                 
+                    <img loading="lazy" src="/stamp.webp" class="slide__img" alt="刻印例">
+
+                 
                 </div>
+
+
             </div>
             <div class="slider__nav">
                 <a class="slider__navlink" href="#slides__1"></a>
@@ -69,57 +68,17 @@
         </p>
     </div>
 </div>
-
 <div id="contact" class="con">
     <h1 class="Home_Contact_Title__KdAFZ">SELECT</h1>
     <main class="Layout_Main__dLHqI">
         <div class="Home_Contact__nbvJ6">
             <p class="Home_Contact_Text__3D7zy">オーダーは以下のフォームよりお送りください。<br class="sp"><br>送信後、決算ページに移行します。<br class="sp"><span class="stripe-marker"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M230.08,78.26l-31.84,26.88L208,145.33a5.46,5.46,0,0,1-8.19,5.86L164,129.66l-35.78,21.53a5.46,5.46,0,0,1-8.19-5.86l9.73-40.19L97.92,78.26a5.38,5.38,0,0,1,3.13-9.48l41.79-3.31,16.1-38.14a5.51,5.51,0,0,1,10.12,0l16.1,38.14L227,68.78A5.38,5.38,0,0,1,230.08,78.26Z" opacity="0.2"></path><path d="M239.35,70.08a13.41,13.41,0,0,0-11.77-9.28l-36.94-2.92L176.43,24.22a13.51,13.51,0,0,0-24.86,0L137.36,57.88,100.42,60.8a13.39,13.39,0,0,0-7.66,23.58l28.06,23.68-8.56,35.39a13.32,13.32,0,0,0,5.1,13.91,13.51,13.51,0,0,0,15,.69L164,139l31.65,19.06a13.54,13.54,0,0,0,15-.69,13.34,13.34,0,0,0,5.09-13.91l-8.56-35.39,28.06-23.68A13.32,13.32,0,0,0,239.35,70.08ZM193.08,99a8,8,0,0,0-2.61,8l8.28,34.21L168.13,122.8a8,8,0,0,0-8.25,0l-30.62,18.43L137.54,107a8,8,0,0,0-2.62-8L108,76.26l35.52-2.81a8,8,0,0,0,6.74-4.87L164,35.91l13.79,32.67a8,8,0,0,0,6.74,4.87l35.53,2.81Zm-105,24.18L29.66,181.66a8,8,0,0,1-11.32-11.32l58.45-58.45a8,8,0,0,1,11.32,11.32Zm10.81,49.87a8,8,0,0,1,0,11.31L45.66,237.66a8,8,0,0,1-11.32-11.32l53.27-53.26A8,8,0,0,1,98.92,173.08Zm73-1a8,8,0,0,1,0,11.32l-54.28,54.28a8,8,0,0,1-11.32-11.32l54.29-54.28A8,8,0,0,1,171.94,172.06Z"></path></svg>カート名：注文希望の色をご選択します。</span>  <br class="sp"><br class="pc"><span class="kome">※</span>は必須項目です</p>
-            <form method="post" action="https://contact-web.form.newt.so/v1/ihenUGaWe">
+            <form method="post" action="https://contact-web.form.newt.so/v1/q775KyEDE">
                 <div style="display: none;"><input type="text" name="wana" /></div>
                 <label class="Home_Contact_Label__hwNpu" for="name">*氏名</label>
                 <input class="Home_Contact_InputText__vKPd7" id="name" required="required" name="name" placeholder="本名をご記入ください">
                 <label class="Home_Contact_Label__hwNpu" for="email">*メールアドレス</label>
                 <input class="Home_Contact_InputText__vKPd7" id="email" type="email" required="required" name="email" placeholder="info@example.com">
-               
-                <label class="Home_Contact_Label__hwNpu" for="fasner_gold">ファスナー (&thinsp;ゴールド&thinsp;)</label>
-                <select name="fasner_gold" class="form-control">
-                    <option value="" disabled selected>選択してください</option>
-                    <option value="ホワイト">ホワイト</option>
-                    <option value="ブラウン">ブラウン</option>
-                    <option value="ブラック">ブラック</option>
-                    <option value="グリーン">グリーン</option>
-                    <option value="ワイン">ワイン</option>
-                    <option value="オレンジ">オレンジ</option>
-                    <option value="ターコイズ">ターコイズ</option>
-                </select>
-
-                <label class="Home_Contact_Label__hwNpu" for="fasner_silver">ファスナー (&thinsp;シルバー 希望の方&thinsp;)
-                </label>
-                <select name="fasner_silver" class="form-control" >
-                    <option value="" disabled selected>選択してください</option>
-                    <option value="ホワイト">ホワイト</option>
-                    <option value="ブラウン">ブラウン</option>
-                    <option value="ブラック">ブラック</option>
-                    <option value="グリーン">グリーン</option>
-                    <option value="ワイン">ワイン</option>
-                    <option value="オレンジ">オレンジ</option>
-                    <option value="ターコイズ">ターコイズ</option>
-                </select>
-
-
-                <label class="Home_Contact_Label__hwNpu" for="fasner_antique">ファスナー (&thinsp;アンティーク 希望の方&thinsp;)
-                </label>
-                <select name="fasner_antique" class="form-control" >
-                    <option value="" disabled selected>選択してください</option>
-                    <option value="ホワイト">ホワイト</option>
-                    <option value="ブラウン">ブラウン</option>
-                    <option value="ブラック">ブラック</option>
-                    <option value="グリーン">グリーン</option>
-                    <option value="ワイン">ワイン</option>
-                    <option value="オレンジ">オレンジ</option>
-                    <option value="ターコイズ">ターコイズ</option>
-                </select>
 
 
                 <label class="Home_Contact_Label__hwNpu" for="ito">*糸</label>
@@ -136,14 +95,20 @@
                 </select>
 
 
-                <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様</label>
-                <select name="kokuin" class="form-control">
+                <label class="Home_Contact_Label__hwNpu" for="hook">*ホック</label>
+                <select name="hook" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
-                    <option value="有り">有り（配置:ポケット1 右側）</option>
-                    <option value="有り">有り（配置:ポケット2 左側）</option>                
+                    <option value="ゴールド">ゴールド</option>
+                    <option value="シルバー">シルバー</option>                    
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印(&thinsp;希望の方 配置:ポケット1 右側&thinsp;)</label>
+                <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様（&thinsp;希望の方&thinsp;）</label>
+                <select name="kokuin" class="form-control">
+                    <option value="" disabled selected>選択してください</option>
+                    <option value="有り">有り（配置:裏カードポケット）</option>
+                </select>
+
+                <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印(&thinsp;配置:裏カードポケット&thinsp;)</label>
                 <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください。大小文字含むA~Z(*大文字は、2つまで。例:T.TTなど3つ場合は、不可)、数字2桁まで(０〜９、*同数字不可:例:22)、 記号【.＆】のみ"></textarea>
 
                 <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
@@ -192,7 +157,7 @@
         }
       
         async function sendRequest(formData: FormData) {
-          return await fetch('https://contact-web.form.newt.so/v1/ihenUGaWe', {
+          return await fetch('https://contact-web.form.newt.so/v1/q775KyEDE', {
             method: 'POST',
             body: formData,
             headers: {
@@ -666,4 +631,3 @@
                 }
                 
                 </style>
-            
